--- a/Dockerfile.template
+++ b/Dockerfile.template
@@ -1,15 +1,33 @@
- FROM __IMAGE_VERSION__
+ FROM __IMAGE_VERSION__ AS base
+ USER root
+
 # FROM nvidia/opencl:devel-ubuntu18.04
 # FROM ubuntu:18.04
 
 RUN apt update && \
     apt -y dist-upgrade
 
-LABEL com.nvidia.volumes.needed="nvidia_driver"
+RUN apt -y install --no-install-recommends \
+                   python3 python3-requests python3-psutil \
+                   curl jq pciutils p7zip wget ca-certificates \
+                   p7zip p7zip-full p7zip-rar
+RUN apt clean
 
-RUN apt install -y --no-install-recommends \
-        ocl-icd-libopencl1 \
-        clinfo
+ENV BASE_URL https://hashtopolis.example.com
+ENV KEY_TYPE voucher
+ENV KEY_VALUE abcdefg
+
+VOLUME /opt/agent
+
+COPY init.sh /init.sh
+ENTRYPOINT ["/init.sh"]
+
+FROM base AS cuda
+
+RUN apt -y instal --no-install-recommends ocl-icd-libopencl1 clinfo
+RUN apt clean
+
+LABEL com.nvidia.volumes.needed="nvidia_driver"
 
 RUN mkdir -p /etc/OpenCL/vendors && \
     echo "libnvidia-opencl.so.1" > /etc/OpenCL/vendors/nvidia.icd
@@ -23,19 +41,3 @@ ENV LD_LIBRARY_PATH /usr/local/nvidia/lib:/usr/local/nvidia/lib64:${LD_LIBRARY_P
 # nvidia-container-runtime
 ENV NVIDIA_VISIBLE_DEVICES all
 ENV NVIDIA_DRIVER_CAPABILITIES compute,utility
-
-RUN apt -y install --no-install-recommends \
-                   python3 python3-requests python3-psutil \
-                   curl jq pciutils p7zip wget ca-certificates \
-                   p7zip p7zip-full p7zip-rar
-
-RUN apt clean
-
-ENV BASE_URL https://hashtopolis.example.com
-ENV KEY_TYPE voucher
-ENV KEY_VALUE abcdefg
-
-VOLUME /opt/agent
-
-COPY init.sh /init.sh
-ENTRYPOINT ["/init.sh"]
