--- a/Dockerfile.template
+++ b/Dockerfile.template
@@ -30,7 +30,7 @@ RUN wget -O- https://apt.repos.intel.com/intel-gpg-keys/GPG-PUB-KEY-INTEL-SW-PRO
 RUN echo "deb [signed-by=/usr/share/keyrings/oneapi-archive-keyring.gpg] https://apt.repos.intel.com/oneapi all main" \
         | tee /etc/apt/sources.list.d/oneAPI.list
 RUN apt update
-RUN apt -y install --no-install-recommends intel-oneapi-runtime-opencl intel-oneapi-runtime-libs clinfo
+RUN apt -y install --no-install-recommends intel-oneapi-runtime-opencl intel-oneapi-runtime-libs clinfo ocl-icd-libopencl1 ocl-icd-opencl-dev
 RUN apt clean
 
 FROM base AS cuda
