--- a/Dockerfile.template
+++ b/Dockerfile.template
@@ -26,7 +26,7 @@ ENTRYPOINT ["/init.sh"]
 FROM base AS cpu
 
 RUN wget -O- https://apt.repos.intel.com/intel-gpg-keys/GPG-PUB-KEY-INTEL-SW-PRODUCTS.PUB | gpg --dearmor \
-        | tee /usr/share/keyrings/oneapi-archive-keyring.gpg
+        | tee /usr/share/keyrings/oneapi-archive-keyring.gpg > /dev/null
 RUN echo "deb [signed-by=/usr/share/keyrings/oneapi-archive-keyring.gpg] https://apt.repos.intel.com/oneapi all main" \
         | tee /etc/apt/sources.list.d/oneAPI.list
 RUN apt update
